# duragraph

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  .init_structure.sh  .pre-commit-config.yaml  .spectral.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAP_ANALYSIS.md  LICENSE  Makefile  README.md  RUNBOOK.md  SECURITY.md  Taskfile.yml  dashboard_embed.go  docker-compose.yml  duragraph.code-workspace  embeds.go  go.mod  go.sum  mkdocs.yml  test-langgraph-api.sh  test-workflow.sh  tygo.yaml
docs/: .gitignore  README.md  RELEASE_PROCESS.md  WORKFLOWS_ANALYSIS.md  astro.config.mjs  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  roadmap.md
docs/app/: global.css  layout.tsx
docs/app/(docs)/[[...slug]]/: page.tsx
docs/app/api/search/: route.ts
docs/app/docs/[[...slug]]/: page.tsx
docs/app/og/[...slug]/: route.tsx
docs/architecture/: integrations.md  overview.md
docs/blog-resources/: knowledge-base.md
docs/content/docs/: README.mdx  getting-started.mdx  index.mdx  roadmap.mdx
docs/content/docs/api-reference/: rest-api.mdx  webhooks.mdx
docs/content/docs/architecture/: data-flow.mdx  overview.mdx  security-model.mdx
docs/content/docs/development/: building.mdx
docs/content/docs/ops/: deployment.mdx  observability.mdx  runbooks.mdx  security.mdx  slos.mdx
docs/content/docs/project/: adrs.mdx  contributing.mdx  rfcs.mdx
docs/content/docs/user-guide/: quickstart.mdx
docs/content/docs/user-guide/concepts/: agents.mdx  observability.mdx
docs/content/docs/user-guide/installation/: cloud.mdx  requirements.mdx  self-hosted.mdx
docs/content/docs/user-guide/sdks/: go.mdx  python.mdx  typescript.mdx
docs/content/docs/user-guide/tutorials/: first-workflow.mdx  langgraph-migration.mdx  multi-agent.mdx  production-deploy.mdx
docs/docs/: README.md  api.md  getting-started.md  index.md  roadmap.md
docs/docs/api-reference/: examples.md  overview.md  rest-api.md  sse-streaming.md  webhooks.md
docs/docs/architecture/: components.md  data-flow.md  overview.md  security-model.md
docs/docs/development/: building.md  getting-started.md  testing.md
docs/docs/ops/: deployment.md  observability.md  runbooks.md  security.md  slos.md  troubleshooting.md
docs/docs/project/: adrs.md  contributing.md  rfcs.md
docs/docs/user-guide/: quickstart.md
docs/docs/user-guide/concepts/: agents.md  ir-format.md  observability.md  workflows.md
docs/docs/user-guide/installation/: cloud.md  requirements.md  self-hosted.md
docs/docs/user-guide/sdks/: go.md  python.md  typescript.md
docs/docs/user-guide/tutorials/: first-workflow.md  langgraph-migration.md  multi-agent.md  production-deploy.md
docs/lib/: layout.shared.tsx
docs/public/: install.sh  openapi.yaml
docs/public/landing/: index.html
docs/public/landing/assets/: carbon-vendor-Dm77Uycd.js  index-3ei5pMKm.css  index-CAdP7Reh.js
docs/scripts/: validate-links.mjs
docs/src/: content.config.ts
docs/src/components/: BlogLayout.astro
docs/src/content/blog/: 2025-year-in-review.mdx  agent-frameworks-2025.mdx  durable-ai-workflows.mdx  inference-at-scale.mdx  llm-gateway-wars.mdx  memory-augmented-agents.mdx  microsoft-agent-framework.mdx  multi-agent-orchestration.mdx  observability-driven-ai.mdx
docs/src/content/docs/: README.mdx  api.mdx  roadmap.mdx
docs/src/content/docs/docs/: getting-started.mdx  introduction.mdx
docs/src/content/docs/docs/api-reference/: examples.mdx  (+4 more)
docs/src/pages/: cookies.astro  index.astro  privacy.astro
docs/src/pages/api/: reference.astro
docs/src/pages/blog/: [slug].astro  index.astro
docs/src/styles/: custom.css  landing.css
python/: CHANGELOG.md  README.md  pyproject.toml
python/.github/workflows/: ci.yml
python/docs/: client-api.md  edge-operators.md  index.md  llm-providers.md  quick-reference.md
python/examples/: async_execution.py  chatbot_simple.py  document_processing.py  edge_operator.py  embedding_usage.py  rag_agent.py  tool_usage.py  vectorstore_usage.py  worker_lifecycle.py
python/src/duragraph/: __init__.py  client.py  executor.py  graph.py  nodes.py  subgraph.py  tools.py  types.py
python/src/duragraph/cli/: main.py
python/src/duragraph/document_loaders/: __init__.py  base.py  file.py  text_splitter.py  web.py
python/src/duragraph/dspy/: __init__.py  bridge.py  module.py
python/src/duragraph/embeddings/: __init__.py  anthropic.py  base.py  cohere.py  ollama.py  openai.py  registry.py
python/src/duragraph/prompts/: __init__.py  store.py  template.py
python/src/duragraph/vectorstores/: __init__.py  base.py  chroma.py  memory.py  pgvector.py  registry.py
python/src/duragraph/worker/: worker.py
python/tests/: test_async.py  test_cli.py  test_client.py  test_document_loaders.py  test_dspy_integration.py  test_edges.py  test_embeddings.py  test_graph.py  test_llm.py  test_prompts.py  test_streaming.py  test_subgraph.py  test_tools.py  test_vectorstores.py  test_worker.py  test_worker_execution.py
workers/python-adapter/: Dockerfile  pyproject.toml
workers/python-adapter/duragraph_pyworker/: __main__.py
workers/python-adapter/tests/: test_worker.py
(+772 files in other folders)
