[tool.poetry]
name = "duragraph-docs"
version = "0.1.0"
description = "Documentation site for the project."
authors = ["Duragraph <hello@duragraph.ai>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs-section-index = "^0.3.4"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocstrings = { extras = ["python"], version = "^0.24.0" }
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.1"
pymdown-extensions = "^10.0.0"
mkdocs-glightbox = "^0.4.0"
mkdocs-panzoom-plugin = "^0.2.2"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mike = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mkdocs]
site_name = "Duragraph Documentation"
site_dir = "site"
docs_dir = "docs"
strict = true