[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duragraph"
version = "0.3.1"
description = "Python SDK for DuraGraph - Reliable AI Workflow Orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "DuraGraph Team", email = "team@duragraph.ai" }
]
keywords = [
    "ai",
    "agents",
    "workflows",
    "orchestration",
    "llm",
    "langgraph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "watchfiles>=0.20.0",
]

[project.optional-dependencies]
nats = ["nats-py>=2.7.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
dspy = ["dspy>=2.0.0"]
all = [
    "nats-py>=2.7.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "dspy>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
duragraph = "duragraph.cli.main:main"

[project.urls]
Homepage = "https://duragraph.ai"
Documentation = "https://docs.duragraph.ai"
Repository = "https://github.com/Duragraph/duragraph"
Issues = "https://github.com/Duragraph/duragraph/issues"
Changelog = "https://github.com/Duragraph/duragraph/blob/main/python/CHANGELOG.md"

[project.entry-points."duragraph"]
# Allows discovery of this package as a duragraph implementation

[tool.hatch.build.targets.wheel]
packages = ["src/duragraph"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (needed for stub functions)
    "ARG002", # unused method argument (needed for stub methods)
    "SIM102", # nested if statements (sometimes more readable)
    "SIM105", # contextlib.suppress suggestion (explicit try/except is clearer)
    "UP007",  # Use X | Y for Union types (keep Union for type aliases)
]

[tool.ruff.lint.isort]
known-first-party = ["duragraph"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/duragraph"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
