[tool.poetry]
name = "duragraph_pyworker"
version = "0.1.0"
description = "Python adapter for Duragraph workers"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.3.0"
boto3 = "^1.28.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W"]
line-length = 88

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true